fix spell bug; enhance blueprint name struct

--- a/prophet_app/templates/index.html
+++ b/prophet_app/templates/index.html
@@ -68,7 +68,7 @@
                         <h3 class="navigation-title">导航</h3>
                     </li>
                     <li class="active"><a href="index"><i class="fa fa-home"></i> <span>首页</span></a></li>
-                    <li><a href="{{url_for('business.go_prophet')}}"><i class="fa fa-file-text"></i> <span>我要预言</span></a></li>
+                    <li><a href="{{url_for('forecast.go_prophet')}}"><i class="fa fa-file-text"></i> <span>我要预言</span></a></li>
                     <li><a href=""><i class="fa fa-book"></i> <span>我的预言</span></a></li>
                     <li>
                         <h3 class="navigation-title">相关话题</h3>
